[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://assets/Reverse.png" type="Texture" id=2]

[node name="Card" type="Control"]
margin_right = 200.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 100, 150 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 200.0
margin_bottom = 300.0

[node name="Border" type="ReferenceRect" parent="Background"]
margin_right = 200.0
margin_bottom = 300.0
border_color = Color( 1, 1, 1, 1 )
border_width = 5.0
editor_only = false

[node name="Number" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 25, 25 )
text = "TEST"
align = 1
valign = 1
uppercase = true

[node name="NumberUp" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 15.0
margin_top = 15.0
margin_right = 25.0
margin_bottom = 25.0
text = "TEST"

[node name="CardBack" type="Sprite" parent="."]
position = Vector2( 100, 150 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Focus" type="TextureButton" parent="."]
margin_right = 200.0
margin_bottom = 300.0

[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
